--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
   <section id="city">
     <h2>City of the Day</h2>
     <div class="featured-city">
-      <img src="images/bamyan.jpg" alt="Bamyan">
+      <img src="images/bamyan1.jpg" alt="Bamyan">
       <h3>Bamyan</h3>
       <p>Bamyan is famous for its historical Buddha statues and breathtaking landscapes. A center of Afghan heritage.</p>
     </div>
