--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
       </div>
 
       <div class="city-card">
-        <img src="images/bamyan2.jpg" alt="Bamyan">
+        <img src="images/bamyan1.jpgg" alt="Bamyan">
         <h3>Bamyan</h3>
         <p>Home of ancient Buddha statues and stunning valleys.</p>
       </div>
